@@ -19,6 +19,13 @@ using std::shared_ptr;
 using std::string;
 using std::vector;
 
+ChildEntry::ChildEntry(Object& owner, const std::string& name)
+    : owner_(owner)
+    , name_(name)
+{
+    owner_.addChildDoc(name_, this);
+}
+
 pair<ArgList,string> Object::splitPath(const string &path) {
     vector<string> splitpath = ArgList(path, OBJECT_PATH_SEPARATOR).toVector();
     if (splitpath.empty()) {
@@ -179,6 +186,21 @@ void Object::removeChild(const string &child)
 {
     notifyHooks(HookEvent::CHILD_REMOVED, child);
     children_.erase(child);
+}
+
+void Object::addChildDoc(const std::string& name, HasDocumentation* doc)
+{
+    childrenDoc_[name] = doc;
+}
+
+const HasDocumentation* Object::childDoc(const string& child)
+{
+    auto it = childrenDoc_.find(child);
+    if (it != childrenDoc_.end()) {
+        return it->second;
+    } else {
+        return nullptr;
+    }
 }
 
 void Object::addHook(Hook* hook)
